[metadata]
name = topsis_Tanisha_102203818
version = 0.2
description = A Python package for implementing TOPSIS for multi-criteria decision making
author = Tanisha
author_email = tanishajain286@gmail.com
url = https://github.com/tanisha1234-sys/topsis-tanisha-102203818
long_description = file: README.md
long_description_content_type = text/markdown
[options]
packages = find:
install_requires =
    pandas
    numpy

[options.extras_require]
dev =
    pytest
    black
